--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ click==8.1.3
 colorama==0.4.4
 dnspython==2.2.1
 Flask==2.1.2
+Flask-Cors==3.0.10
 Flask-JWT-Extended==4.4.0
 Flask-RESTful==0.3.9
 importlib-metadata==4.11.4
