--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Flask==2.1.2
 Flask-Cors==3.0.10
 Flask-JWT-Extended==4.4.0
 Flask-RESTful==0.3.9
+gunicorn==20.1.0
 importlib-metadata==4.11.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
