--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aniso8601==9.0.1
 click==8.1.3
 colorama==0.4.4
 dnspython==2.2.1
+email-validator==1.2.1
 Flask==2.1.2
 Flask-Cors==3.0.10
 Flask-JWT-Extended==4.4.0
